Fix Radio button aligment

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
@@ -6,6 +6,7 @@
 @import "modules/punchline";
 @import "modules/gauge";
 @import "modules/main_content";
+@import "modules/form";
 @import "modules/home";
 @import "modules/authentication";
 @import "modules/exemples";
