--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/modules/_form.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/modules/_form.scss
@@ -11,7 +11,7 @@ ul.error-list {
     display: table-row;
   }
 
-  > div input, .haphpy-radio > div label {
+  > div input, > div label {
     display: table-cell;
     vertical-align: middle;
     height: 100%;
