--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/base.html.twig
@@ -60,7 +60,12 @@
                 <a href="{{ path('haphpy_index') }}" class="navbar-logo">HaPHPy Birthday</a>
                 <nav id="main-nav" class="pull-right">
                     <ul>
-                        <li><a href="{{ path('haphpy_index') ~ '#contribute' }}">{{ 'menu.index.label'|trans }}</a></li>
+                        <li>
+                            <a href="{{ path('haphpy_index') ~ '#contribute' }}">
+                                {% set label = (contribution is defined and contribution.filename is not null) ? 'my_contribution' : 'contribute' %}
+                                {{ ('menu.index.' ~ label)|trans }}
+                            </a>
+                        </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                                 {{ 'menu.contributions.label'|trans }}
