Add share buttons for contributions

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/modules/_general.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/modules/_general.scss
@@ -62,3 +62,13 @@ a.stand-out:hover {
 .nowrap {
   white-space: nowrap;
 }
+
+/** social networks **/
+#twitter-widget-0 {
+    vertical-align: middle;
+    margin-right: 0.5em;
+}
+
+.fb_iframe_widget span {
+    vertical-align: middle !important;
+}
