Make visited contributions link different

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/modules/_user_groups.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/modules/_user_groups.scss
@@ -54,6 +54,13 @@
     color: #f34141;
   }
 
+  &:visited {
+    color: #f34141;
+    &:hover {
+      color: #ffffff;
+    }
+  }
+
   span {
     margin-right: 0.5em;
   }
