Add count badge in menu

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
@@ -1,5 +1,7 @@
 @import "compass/css3/transform";
 
+$secondary-color: #43B2E4;
+
 @import "modules/general";
 @import "modules/menu";
 @import "modules/header";
