Add php7 logo in footer

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
@@ -18,3 +18,4 @@ $secondary-color: #43B2E4;
 @import "modules/about";
 @import "modules/license";
 @import "modules/public_contribution";
+@import "modules/footer";
