Add link to add a PUG in contributions list

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
@@ -80,6 +80,15 @@
                     </div>
                 {% endfor %}
             </div>
+
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <a href="https://github.com/afup/haphpy-birthday/blob/master/docs/php-user-groups.md">
+                        <span class="fa fa-plus"></span>
+                        Add your PHP User Group to the list
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 {% endspaceless %}{% endblock %}
