Add link to contribute under contributions list

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
@@ -41,6 +41,15 @@
                     </div>
                 {% endfor %}
             </div>
+
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <a href="{{ path('haphpy_index') ~ '#contribute' }}" class="differ">
+                        <span class="fa fa-upload"></span>
+                        Add your contribution to the PHP movie…
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
