--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/main.scss
@@ -5,12 +5,10 @@ $secondary-color: #43B2E4;
 @import "modules/general";
 @import "modules/menu";
 @import "modules/header";
-@import "modules/punchline";
+@import "modules/video";
 @import "modules/gauge";
 @import "modules/main_content";
-@import "modules/form";
 @import "modules/home";
-@import "modules/authentication";
 @import "modules/exemples";
 @import "modules/contribution_over";
 @import "modules/submission";
