Move the about section to HP

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
@@ -92,4 +92,19 @@
             </div>
         </div>
     </section>
+
+    <section class="page-section dark-background" id="about-misc">
+        <div class="container">
+            <h2>{{ 'about.thanks.title'|trans }}</h2>
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <ul>
+                        <li>{{ 'about.thanks.php_ug'|trans|raw }}</li>
+                        <li>{{ 'about.thanks.galaxy'|trans|raw }}</li>
+                        <li>{{ 'about.thanks.fanzutti'|trans|raw }}</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endspaceless %}{% endblock %}
